deploy/website-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: website
