deploy/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website
  namespace: website
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`insipx.jupiter.lan`)
      kind: Rule
      services:
        - name: website
          port: 80
  tls: {}
